Added step to rename file

--- a/.github/workflows/release-build.yml
+++ b/.github/workflows/release-build.yml
@@ -30,7 +30,10 @@ jobs:
       - name: Build APK
         run: flutter build apk --release --no-tree-shake-icons
 
+      - name: Rename APK
+        run: mv ${{ env.WORKING_DIR }}/build/app/outputs/flutter-apk/app-release.apk ${{ env.WORKING_DIR }}/build/app/outputs/flutter-apk/custom-hue.apk
+
       - name: Upload APK to release
         uses: softprops/action-gh-release@v2
         with:
-          files: ${{ env.WORKING_DIR }}/build/app/outputs/flutter-apk/app-release.apk
+          files: ${{ env.WORKING_DIR }}/build/app/outputs/flutter-apk/custom-hue.apk
